--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ['3.11']
+        python-version: ['3.8']
 
     steps:
     - uses: actions/checkout@v3
@@ -30,9 +30,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ../requirements.txt
+        pip install -r ../config/tensorflow/requirements.txt
 
     - name: Run tests
-      run: |
-        cd ../tests
-        nose2
+      run: pytest
