--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ../config/tensorflow/requirements.txt
+        pip install -r ../config/tensor/requirements.txt
 
     - name: Run tests
-      run: pytest
+      run: |
+        cd ../tests
+        pytest
