--- a/config/tensorflow/Dockerfile
+++ b/config/tensorflow/Dockerfile
@@ -6,5 +6,5 @@ COPY ["requirements.txt", "/tensorflow/"]
 RUN pip install -r requirements.txt
 RUN rm requirements.txt
 
-CMD ["jupyter", "lab", "--port=8888", "--notebook-dir=[/data]", "--no-browser", "--ip=0.0.0.0", "--allow-root"]
+CMD ["jupyter", "lab", "--port=8888", "--notebook-dir=/data", "--no-browser", "--ip=0.0.0.0", "--allow-root"]
 EXPOSE 8888
