--- a/src/docker/gpu-swarm.yaml
+++ b/src/docker/gpu-swarm.yaml
@@ -1,16 +1,16 @@
 version: '3.8'
 services:
 
-  database:
-    build: ./database
-    image: database
+  postgres:
+    build: ./postgres
+    image: postgres
     environment:
       - POSTGRES_DB=${DB}
       - POSTGRES_USER=${USER}
       - POSTGRES_PASSWORD=${PASSWORD}
     restart: unless-stopped
     volumes: 
-      - ./database/data:/data
+      - ./postgres/data:/var/lib/postgresql/data
     ports:
       - '5432:5432'
 
@@ -18,7 +18,7 @@ services:
     image: dpage/pgadmin4:latest
     restart: unless-stopped
     depends_on:
-      - database
+      - postgres
     environment:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_EMAIL}
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
@@ -28,11 +28,11 @@ services:
       - '5433:80'
 
   tensorflow:
-    build: ./tensorflow
-    image: tensorflow
+    build: ./tensorflow-gpu
+    image: tensorflowgpu
     restart: unless-stopped
     depends_on:
-      - database
+      - postgres
     deploy:
       resources:
         reservations:
@@ -41,6 +41,6 @@ services:
             device_ids: ['0']
             capabilities: [gpu]
     volumes: 
-      - ./tensorflow/data:/data
+      - ../../src:/data
     ports:
       - '8888:8888'
