--- a/src/docker/pgadmin.yaml
+++ b/src/docker/pgadmin.yaml
@@ -5,7 +5,7 @@ services:
     restart: unless-stopped
     environment:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_EMAIL}
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PW}
     volumes: 
       - ./pgadmin/data:/data
     ports:
