--- a/src/docker/postgres.yaml
+++ b/src/docker/postgres.yaml
@@ -2,14 +2,14 @@ version: '3.8'
 services:
 
   postgres:
-    build: ./postgres
-    image: postgres
+    build: ./postgreswgis
+    image: postgreswgis
     environment:
-      - POSTGRES_DB=${DB}
-      - POSTGRES_USER=${USER}
-      - POSTGRES_PASSWORD=${PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PW}
     restart: unless-stopped
     volumes: 
-      - ./postgres/data:/var/lib/postgresql/data
+      - ./postgreswgis/data:/var/lib/postgresql/data
     ports:
       - '5432:5432'
