ensure container os is up to date upd requirements

--- a/src/docker/tensorflow-gpu/Dockerfile
+++ b/src/docker/tensorflow-gpu/Dockerfile
@@ -1,6 +1,9 @@
 FROM tensorflow/tensorflow:latest-gpu-jupyter
 WORKDIR /tensorflow
 
+RUN apt update && apt upgrade -y
+
+RUN /usr/bin/python3 -m pip install --upgrade pip
 COPY ["requirements.txt", "/tensorflow/"]
 
 RUN pip install -r requirements.txt
