--- a/config/database/Dockerfile
+++ b/config/database/Dockerfile
@@ -1,6 +1,6 @@
 FROM postgres:latest
 
-RUN apt update && apt upgrade
+RUN apt update && apt upgrade -y
 RUN apt install -y postgis
 
 ADD init.sql /docker-entrypoint-initdb.d/
