--- a/src/docker/gpu-swarm.yaml
+++ b/src/docker/gpu-swarm.yaml
@@ -18,7 +18,7 @@ services:
     image: dpage/pgadmin4:latest
     restart: unless-stopped
     depends_on:
-      - postgres
+      - postgreswgis
     environment:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_EMAIL}
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PW}
@@ -32,7 +32,7 @@ services:
     image: tensorflow-gpu
     restart: unless-stopped
     depends_on:
-      - postgres
+      - postgreswgis
     deploy:
       resources:
         reservations:
