update compose to allow git commit in docker

--- a/src/docker/tensorflow-gpu.yaml
+++ b/src/docker/tensorflow-gpu.yaml
@@ -2,8 +2,8 @@ version: '3.8'
 services:
 
   tensorflowcpu:
-    build: ./tensorflow-cpu
-    image: tensorflow-cpu
+    build: ./tensorflow-gpu
+    image: tensorflow-gpu
     restart: unless-stopped
     volumes: 
       - ../../:/data
