fix service name conflict

--- a/src/docker/tensorflow-gpu.yaml
+++ b/src/docker/tensorflow-gpu.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
 
-  tensorflowcpu:
+  tensorflowgpu:
     build: ./tensorflow-gpu
     image: tensorflow-gpu
     restart: unless-stopped
