--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -1,7 +1,13 @@
 name: Lint
 
-on: [push, pull_request]
-
+on:
+  pull_request:
+    branches:
+    - main
+  push:
+    branches:
+    - main
+    
 jobs:
   lint:
     runs-on: ubuntu-latest
