--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -9,7 +9,7 @@ on:
     - main
 
 jobs:
-  lint-black:
+  lint-formatting:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,4 +19,4 @@ jobs:
           options: "--check --verbose"
           src: "./src"
           jupyter: true
-          version: "23.10"
+          version: "23.1.0"
