--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -23,4 +23,4 @@ jobs:
           pip install pylint
       - name: pylint
         run: |
-          pylint $(git ls-files '*.py')
+          pylint --rcfile=.pylintrc $(git ls-files '*.py')
