refactor duplicate class names (#58)
required mypy changes

--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -21,6 +21,12 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install mypy
+          pip install -U nbqa
       - name: mypy
         run: |
-          mypy src/
+          python3 -m pip install -r src/docker/tensorflow-cpu/requirements.txt
+          python3 -m pip install pandas-stubs
+          python3 -m pip install lxml-stubs
+          python3 -m pip install types-requests
+          mypy src/**/*.py
+          nbqa mypy src/**/*.ipynb
