--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: psf/black@stable
         with:
-          options: "--check --verbose"
+          options: "--check --diff --verbose"
           src: "./src"
           jupyter: true
           version: "23.1.0"
