--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -28,5 +28,6 @@ jobs:
           python3 -m pip install pandas-stubs
           python3 -m pip install lxml-stubs
           python3 -m pip install types-requests
-          mypy src/**/*.py
-          nbqa mypy src/**/*.ipynb
+          cd src/
+          mypy **/*.py
+          nbqa mypy **/*.ipynb
