--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -29,6 +29,7 @@ jobs:
           python3 -m pip install lxml-stubs
           python3 -m pip install types-requests
           python3 -m pip install sqlalchemy-stubs
+          python3 -m pip install types-SQLAlchemy
           cd src/
           mypy **/*.py
           nbqa mypy **/*.ipynb
